chore: open api spec and doc
