# docs/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: WhatsApp API MultiDevice
-  version: 3.7.0
+  version: 3.8.0
   description: This API is used for sending whatsapp via API
 servers:
   - url: http://localhost:3000
@@ -529,6 +529,61 @@ paths:
                   type: string
                   example: '110.370529'
                   description: Longitude coordinate
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SendResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorBadRequest'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorInternalServer'
+  /send/poll:
+    post:
+      operationId: sendPoll
+      tags:
+        - send
+      summary: Send Poll / Vote
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                phone:
+                  type: string
+                  description: The WhatsApp phone number to send the poll to, including the '@s.whatsapp.net' suffix.
+                  example: '6289685024421@s.whatsapp.net'
+                question:
+                  type: string
+                  description: The question for the poll.
+                  example: 'Siapa Nama Avatar The Last Air Bender?'
+                options:
+                  type: array
+                  description: The options for the poll.
+                  items:
+                    type: string
+                  example: [ 'Zuko', 'Aang', 'Katara' ]
+                max_answer:
+                  type: integer
+                  description: The maximum number of answers allowed for the poll.
+                  example: 2
+              required:
+                - phone
+                - question
+                - options
+                - max_answer
       responses:
         '200':
           description: OK
